# srcUpdate

./: LICENSE  README.md  srcUpdate.cabal
app/: Main.hs
lib/SrcUpdate/: ParseFile.hs  RebuildConfig.hs  TermColor.hs
