cabal-version:      2.4

name:               srcUpdate
synopsis:           Simple tool for rebuilding pools of source code.
license:            MIT
author:             lamekino
version:            0.1.0.0

library src-update-lib
  hs-source-dirs:   lib
  default-language: Haskell2010

  build-depends:
    base      ^>=4.16.4.0,
    process   ^>= 1.6.16.0,
    unix      ^>= 2.7.2.2,
    directory ^>= 1.3.6.2,
  exposed-modules:
    SrcUpdate.TermColor
    SrcUpdate.ParseFile
    SrcUpdate.RebuildConfig

executable src-update
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010

    build-depends:
      base      ^>=4.16.4.0,
      directory ^>= 1.3.6.2,
      unix      ^>= 2.7.2.2,
      src-update-lib
